Fixed overflow

--- a/rps/src/index.css
+++ b/rps/src/index.css
@@ -166,8 +166,4 @@ button:hover {
   }
 }
 
-@media (min-width: 1047px) {
-  body {
-    overflow: hidden;
-  }
-}
+
